Login & Note fixes